force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Strategic account plan node (custom-baseline path per architecture 2.1). Anchors at the ultimate parent (enterprise) or a regional account. Parent of Whitespace_Cell__c.</description>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Plan_Team_Access__c</fullName>
        <label>Plan Team Access</label>
    </sharingReasons>
</CustomObject>