force-app/main/default/objects/Account_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account (Plan Node)</label>
    <description>The plan node - ultimate parent (enterprise) or a regional anchor account.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Plans</relationshipName>
    <relationshipLabel>Account Plans</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>