force-app/main/default/objects/Account_Plan__c/fields/Deal_Model__c.field-meta.xml
<CustomField>
    <fullName>Deal_Model__c</fullName>
    <label>Deal Model</label>
    <description>Controls how an empty cell is read and default ownership.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Enterprise</fullName><default>true</default><label>Enterprise</label></value>
            <value><fullName>Coordinated</fullName><default>false</default><label>Coordinated</label></value>
            <value><fullName>Regional</fullName><default>false</default><label>Regional</label></value>
            <value><fullName>Buying_Centre</fullName><default>false</default><label>Buying Centre</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>