force-app/main/default/objects/Account_Plan__c/fields/Family_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Family_Coverage_Pct__c</fullName>
    <label>Family Coverage %</label>
    <description>Present cells divided by applicable cells. Distinct from seat penetration.</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>