force-app/main/default/objects/Account_Plan__c/fields/Headroom__c.field-meta.xml
<CustomField>
    <fullName>Headroom__c</fullName>
    <label>Headroom</label>
    <description>Roll-up of expected revenue (gap-to-benchmark) across the plan's gap cells.</description>
    <type>Summary</type>
    <summarizedField>Whitespace_Cell__c.Expected_Revenue__c</summarizedField>
    <summaryForeignKey>Whitespace_Cell__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
</CustomField>