force-app/main/default/objects/Account_Plan__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>Next Review Date</label>
    <description>Drives QBR cadence.</description>
    <type>Date</type>
</CustomField>