force-app/main/default/objects/Account_Plan__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <description>SWOT - Opportunities.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>