force-app/main/default/objects/Account_Plan__c/fields/Parent_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Plan__c</fullName>
    <label>Parent Plan</label>
    <description>Plan hierarchy: enterprise to regional child.</description>
    <type>Lookup</type>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Child_Plans</relationshipName>
    <relationshipLabel>Child Plans</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>