force-app/main/default/objects/Account_Plan__c/fields/Plan_Lead__c.field-meta.xml
<CustomField>
    <fullName>Plan_Lead__c</fullName>
    <label>Plan Lead</label>
    <description>Single accountable owner of the plan.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans_Led</relationshipName>
    <relationshipLabel>Account Plans (Lead)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>