force-app/main/default/objects/Account_Plan__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>In_Review</fullName><default>false</default><label>In Review</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>