force-app/main/default/objects/Account_Plan__c/fields/Plan_Tier__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tier__c</fullName>
    <label>Plan Tier</label>
    <description>Depth of plan (tiered adoption). Sets default review cadence.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>T1</fullName><default>false</default><label>T1</label></value>
            <value><fullName>T2</fullName><default>false</default><label>T2</label></value>
            <value><fullName>T3</fullName><default>false</default><label>T3</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>