force-app/main/default/objects/Account_Plan__c/fields/Review_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Review_Cadence__c</fullName>
    <label>Review Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Quarterly</fullName><default>true</default><label>Quarterly</label></value>
            <value><fullName>Half_Yearly</fullName><default>false</default><label>Half-Yearly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>