force-app/main/default/objects/Account_Plan__c/fields/Seat_Penetration_Pct__c.field-meta.xml
<CustomField>
    <fullName>Seat_Penetration_Pct__c</fullName>
    <label>Seat Penetration %</label>
    <description>Seats sold divided by SoW denominator (attorneys / counsel). Distinct from family coverage.</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>