force-app/main/default/objects/Account_Plan__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <description>Mirrors the record type for reporting and matrix relevance.</description>
    <type>Text</type>
    <formula>CASE(RecordType.DeveloperName, "Law_Firm", "Law Firm", "Corporate", "Corporate", "")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>