force-app/main/default/objects/Account_Plan__c/fields/SoW_Denominator__c.field-meta.xml
<CustomField>
    <fullName>SoW_Denominator__c</fullName>
    <label>SoW Denominator</label>
    <description>Attorneys (law firm) or in-house counsel headcount (corporate). Drives share-of-wallet / penetration.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>