force-app/main/default/objects/Account_Plan__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <description>SWOT - Strengths.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>