force-app/main/default/objects/Account_Plan__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <label>Threats</label>
    <description>SWOT - Threats.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>