force-app/main/default/objects/Account_Plan__c/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <label>Total ARR</label>
    <description>Roll-up of owned ARR across the plan's white-space cells.</description>
    <type>Summary</type>
    <summarizedField>Whitespace_Cell__c.ARR__c</summarizedField>
    <summaryForeignKey>Whitespace_Cell__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
</CustomField>