force-app/main/default/objects/Account_Plan__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <description>SWOT - Weaknesses.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>