force-app/main/default/objects/Account_Plan__c/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <description>Corporate / in-house legal segment - SoW denominator = in-house counsel headcount; Advertising not relevant.</description>
    <label>Corporate</label>
</RecordType>