force-app/main/default/objects/Account_Plan__c/recordTypes/Law_Firm.recordType-meta.xml
<RecordType>
    <fullName>Law_Firm</fullName>
    <active>true</active>
    <description>Law firm segment - SoW denominator = attorneys; all families relevant.</description>
    <label>Law Firm</label>
</RecordType>