force-app/main/default/objects/Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Plan_Tier__c</columns>
    <columns>Deal_Model__c</columns>
    <columns>Total_ARR__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Next_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>